--- a/deployment/docker/docker-compose-dev.yml
+++ b/deployment/docker/docker-compose-dev.yml
@@ -8,7 +8,8 @@ services:
     ports:
       - "5002:5002"
     environment:
-      - FLASK_ENV=production
+      - FLASK_ENV=development
+      - FLASK_DEBUG=1
     working_dir: /app
     command: python3 run.py
     networks:
