--- a/service/frontend/nginx.conf
+++ b/service/frontend/nginx.conf
@@ -5,7 +5,12 @@ server {
   root /usr/share/nginx/html;
   index index.html;
 
-  location / {
-    try_files $uri /index.html;
+  access_log /var/log/nginx/access.log;
+  error_log /var/log/nginx/error.log warn;
+
+  location /api/ {
+    proxy_pass http://127.0.0.1:5002;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
   }
 }
