--- a/deployment/docker/Dockerfile-backend
+++ b/deployment/docker/Dockerfile-backend
@@ -1,4 +1,4 @@
-FROM python:3.13-slim
+FROM python:3.12-slim
 
 ENV REGION=asia-east1
 ENV ZONE=asia-east1-b
@@ -7,7 +7,8 @@ RUN apt update && \
     apt install -y --no-install-recommends \
         make \
         git \
-        && rm -rf /var/lib/apt/lists/*
+    && apt clean \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
