--- a/service/frontend/nginx.conf
+++ b/service/frontend/nginx.conf
@@ -9,7 +9,7 @@ server {
   error_log /var/log/nginx/error.log warn;
 
   location /api/ {
-    proxy_pass http://127.0.0.1:5002;
+    proxy_pass http://backend:5002;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
   }
