--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,17 @@
 # Terraform
-*.tfstate
-*.tfstate.backup
-.terraform/
+deployment/terraform/terraform.tfstate
+deployment/terraform/terraform.tfstate.*
+deployment/terraform/.terraform/
+deployment/terraform/terraform.tfvars
 
 # GCP key
 key.json
+
+# Python venv
+service/backend/.venv/
+
+# Node modules
+service/frontend/node_modules/
 
 # Environments
 .env
