--- a/deployment/.github/workflows/ci-cd.yml
+++ b/deployment/.github/workflows/ci-cd.yml
@@ -1,25 +1,27 @@
-name: CI/CD
+name: CI/CD Pipeline
 
 on:
   push:
-    branches: [master]
+    branches:
+      - main
 
 jobs:
-  deploy:
+  build-deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Set up gcloud CLI
-        uses: google-github-actions/auth@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v1
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          project_id: your-gcp-project-id
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
 
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v2
-
-      - name: Terraform Init
-        run: make terraform-init
-
-      - name: Terraform Apply
-        run: make terraform-apply
+      - name: Deploy with Makefile
+        run: make deploy
